段落を追加

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>gh-pagesのブランチはGitHub Pagesに公開されます
     </h1>
-    <p>この変更はmainブランチで追加されました。</p>
+    <p>この変更は、mainブランチで追加されました。</p>
 </body>
 </html>
